<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, GestureTest!</string>
    <string name="app_name">FM Radio</string>
    <string name="app_title">FM Radio Receiver</string>
    <string name="dialog_radio_open">Opening FM Radio...</string>
    <string name="dialog_radio_close">Closing FM Radio...</string>
    <string name="clear_scan">Confirm to clear and scan?</string>
    <string name="ok">Ok</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="scan_wait">Scanning, pls wait...</string>
    <string name="scanning">Scanning...</string>
    <string name="stereo">stereo</string>
    <string name="speaker">Speaker</string>
    <string name="headset">Headset</string>
    <string name="record">Record</string>
    <string name="stopRecord">Stop recording</string>
    <string name="scan_save">ScanSave</string>
    <string name="stop_scan">Stop Scanning</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="select_all">Select all</string>
    <string name="done">Done</string>
    <string name="mhz">MHz</string>
    <string name="station_name">Preset Name</string>
    <string name="station_freq">freq</string>
    <string name="add_name">Add Name</string>
    <string name="add_setting">add setting</string>
    <string name="all_setting">All setting</string>
    <string name="headset_on">Please plug your headset</string>
    <string name="dialog_scan_clear">FM is scanning</string>
    <string name="dialog_open_failed">Open failed</string>
    <string name="airplane">Close FM in Airplane mode</string>
    <string name="inCall">Please end the call first</string>
    <string name="toast_record_file_path">File store path is :</string>
    <string name="toast_record_fail">Record fail</string>
    <string name="toast_record_no_sdcard">No sdcard, please insert sdcard.</string>
    <string name="time">00:00:00</string>
    <string name="recordTime">Record Time is:</string>
    <string name="internal_error">Internal error</string>
    <string name="max_filesize_reached">Max file size reached</string>
    <string name="unknown_error">Unknown error</string>
    <string name="radio_on">FMRadio is on!</string>
    <string name="radio">FMRadio</string>
    <string name="radio_running">FMRadio is running</string>
    <string name="add_channel_title">Save Channels</string>
    <string name="add_channel">Save available channels to channel list？</string>
    <string name="menu_scan_start">Scan</string>
    <string name="msg_scanning">All Stations</string>
    <string name="menu_clean">Clean</string>
    <string name="menu_sleep">Auto-Off</string>
    <string name="onoff_warning">Please touch this button</string>
    <string name="msg_starting">Starting..</string>
    <string name="msg_off">Closing..</string>
    <string name="default_sleep" />
    <string name="prog_service_string" />
    <string name="frequency_string" />
    <string name="frequency_unit">MHz</string>
    <string name="default_station_name_num">FM-</string>
    <string name="default_station_num">NO.</string>
    <string name="msg_s">It is empty,please try again</string>
    <string name="dialog_presetlist_rename_title">Enter a name</string>
    <string name="alert_dialog_ok">Ok</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="empty_file_name">File name can not be empty</string>
    <string name="same_rename">Rename exist</string>
    <string name="preset_rename">Rename</string>
    <string name="preset_replace">Replace</string>
    <string name="preset_delete">Clean</string>
    <string name="preset_rename_success">Rename successful</string>
    <string name="batch_delete">Batch Delete</string>
    <string name="check_all">All</string>
    <string name="cancel_all">Cancel</string>
    <string name="preset_delete_name">Delete</string>
    <string name="prompt">Prompt</string>
    <string name="select_delete">Are you sure delete ?</string>
    <string name="plug_headset_warning">Plug in a Headset to use FM</string>
    <string name="fm_stop_toast">Fm already stop..</string>
    <string name="add_to_count">Add Channels?</string>
    <string name="searched_info">Searched available channels:</string>
    <string name="msg_search_title">FM</string>
    <string name="message_scanning">Scanning..</string>
    <string name="reset_channel_info">Reset station information</string>
    <string name="delete_item">Delete</string>
    <string name="re_name">Rename:</string>
    <string name="re_freq">Reset frequency(MHz):</string>
    <string name="file_msg">No record ,please for scanning first</string>
    <string name="fm_recording_stop">FM recording stop</string>
    <string name="cannot_open_fm_in_airplane_mode">Cannot open FMRadio in Airplane mode</string>
    <string name="shuting_down_fmradio_in_airplane_mode">Shutting down FMRadio in Airplane mode</string>
    <string name="phone_running_warning">Phone is running, please close the phone before open the FMRadio.</string>
    <string name="add">add</string>
    <string name="is_first">Run the first search..</string>
    <string name="dlg_progress_title">Search</string>
    <string name="dlg_progress_text">Search channels...</string>
    <string name="dlg_addedit_station_name">Name:</string>
    <string name="dlg_addedit_station_freq">Frequency:</string>
    <string name="dlg_addedit_title_edit">Edit Channel</string>
    <string name="default_station_name">New Channel</string>
    <string name="dlg_delete_confirm_title">Confirm remove from favorites</string>
    <string name="dlg_delete_confirm_title1">Confirm remove from preset channels</string>
    <string name="dlg_delete_confirm_text">Are you sure you want to remove this channel from favorites?</string>
    <string name="dlg_delete_confirm_text1">Are you sure you want to remove this channel from preset channels?</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="toast_invalid_input">The last invalid input, valid value is 0 or 5.</string>
    <string name="empty_list">Channel list is empty.</string>
    <string name="toast_favorite_full">Cannot add the channel to favorite list because it is full.</string>
    <string name="toast_already_favorite">This channel is already in favorite list.</string>
    <string name="toast_channel_added">Successfully added to favorites.</string>
    <string name="toast_invalid_frequency">Invalid frequency for current location. Valid frequency scope:87.5-108.5</string>
    <string name="toast_start_recording">Start recording...</string>
</resources>
