<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:id="@id/radio_rx" android:background="@drawable/bg" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:orientation="horizontal" android:id="@id/prog_frequency_view" android:layout_width="wrap_content" android:layout_height="280.0dip" android:layout_centerHorizontal="true">
        <TextView android:textAppearance="?android:textAppearanceMedium" android:textSize="30.0dip" android:textColor="@color/freq" android:id="@id/prog_service_tv" android:paddingLeft="45.0dip" android:layout_width="200.0dip" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:text="@string/prog_service_string" android:singleLine="true" android:shadowColor="#ffffffff" />
        <TextView android:textSize="90.0dip" android:textColor="@color/freq" android:id="@id/prog_frequency_tv" android:paddingLeft="33.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="62.0dip" android:text="@string/frequency_string" android:singleLine="true" android:shadowColor="#ff000000" android:shadowDx="0.0" android:shadowDy="-0.51" android:shadowRadius="2.0" />
        <TextView android:textAppearance="?android:textAppearanceLarge" android:textSize="30.0dip" android:id="@id/prog_frequency_unit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/frequency_unit" android:singleLine="true" android:layout_toRightOf="@id/prog_frequency_tv" android:layout_alignBaseline="@id/prog_frequency_tv" />
    </RelativeLayout>
    <include layout="@layout/radio_rx_display" />
    <ImageView android:id="@id/cursor" android:layout_width="wrap_content" android:layout_height="290.0dip" android:layout_marginLeft="180.0dip" android:src="@drawable/cursor" />
    <LinearLayout android:orientation="horizontal" android:id="@id/button_row_1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="296.0dip">
        <ImageView android:id="@id/seek_down_button" android:focusable="true" android:visibility="visible" android:clickable="true" android:layout_width="58.0dip" android:layout_height="58.0dip" android:layout_marginLeft="30.0dip" android:src="@drawable/btn_arrow_left" />
        <ImageView android:id="@id/tune_down_button" android:focusable="true" android:visibility="visible" android:clickable="true" android:layout_width="58.0dip" android:layout_height="58.0dip" android:layout_marginLeft="23.0dip" android:src="@drawable/btn_arrow_sleft" />
        <ImageView android:id="@id/tune_up_button" android:focusable="true" android:visibility="visible" android:clickable="true" android:layout_width="58.0dip" android:layout_height="58.0dip" android:layout_marginLeft="20.0dip" android:src="@drawable/btn_arrow_sright" />
        <ImageView android:id="@id/seek_up_button" android:focusable="true" android:visibility="visible" android:clickable="true" android:layout_width="58.0dip" android:layout_height="58.0dip" android:layout_marginLeft="20.0dip" android:src="@drawable/btn_arrow_right" />
    </LinearLayout>
    <RelativeLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="353.0dip">
        <TextView android:textAppearance="?android:textAppearanceMedium" android:textSize="13.0sp" android:textColor="@color/freq" android:ellipsize="marquee" android:gravity="center" android:id="@id/fm_record_start" android:background="@drawable/bubble2" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="30.0dip" android:text="@string/toast_start_recording" android:singleLine="true" android:layout_alignBaseline="@id/mute_button" android:layout_centerHorizontal="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <RelativeLayout android:orientation="horizontal" android:id="@id/message_row" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="376.0dip">
        <ImageView android:id="@id/mute_button" android:focusable="true" android:clickable="true" android:layout_width="58.0dip" android:layout_height="58.0dip" android:layout_marginLeft="25.0dip" android:src="@drawable/ep_default" />
        <ImageView android:id="@id/fm_record_button" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/btn_fm_record" android:layout_centerHorizontal="true" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:textSize="13.0sp" android:gravity="center" android:id="@id/sleep_msg_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="90.0dip" android:text="@string/default_sleep" android:layout_alignBaseline="@id/mute_button" android:layout_centerVertical="true" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:textSize="13.0sp" android:textColor="@color/freq" android:gravity="center" android:id="@id/onoff_warning" android:background="@drawable/bubble" android:visibility="invisible" android:layout_width="155.0dip" android:layout_height="wrap_content" android:layout_marginLeft="125.0dip" android:text="@string/msg_starting" android:layout_alignBaseline="@id/mute_button" android:layout_centerVertical="true" />
        <ImageView android:id="@id/power_off_button" android:focusable="true" android:clickable="true" android:layout_width="58.0dip" android:layout_height="58.0dip" android:layout_marginLeft="272.0dip" android:src="@drawable/btn_fm_on" />
    </RelativeLayout>
    <RelativeLayout android:orientation="horizontal" android:id="@id/rl_recinfo" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="421.0dip">
        <TextView android:textSize="16.0sp" android:textStyle="normal" android:textColor="#ffffffff" android:ellipsize="marquee" android:id="@id/txtRecInfoLeft" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/preset_full_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <include layout="@layout/navigate" />
    </LinearLayout>
    <View android:id="@id/movementview" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignBottom="@id/prog_frequency_view" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
</RelativeLayout>